--- a/install_apache.yml
+++ b/install_apache.yml
@@ -3,5 +3,11 @@
   tasks:
 
   - name: install apache2 package
-    apt:
-      name: apache2
+    package:
+      name:
+        - "{{ apache_package }}"
+        - "{{ php_package }}"
+      state: latest
+      update_cache: yes
+
+    
