--- a/inventory.ini
+++ b/inventory.ini
@@ -1,6 +1,2 @@
-[web_servers]
-#^is a metagrouup
-192.168.56.104
-
-[Manage_Node_Centos_Kunwari]
-192.168.56.108
+[Isaac]
+192.168.56.112 apache_package=apache2 php_package=libapache2-mod-php
